// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`csr snapshot test > csr test src/divider/_example/base.tsx 1`] = `
<div>
  <div
    class="divider-demo__title"
  >
    水平分割线
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    role="separator"
  >
    <div
      class="t-divider__content"
    />
  </div>
  <div
    class="divider-demo__title"
  >
    带文字水平分割线
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--left"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--right"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="divider-demo__title"
    style="margin-bottom: 10px;"
  >
    垂直分割线
  </div>
  <div
    class="divider-wrapper"
  >
    <span>
      文字信息
    </span>
    <div
      class="t-divider t-divider--vertical t-divider--center"
      role="separator"
    >
      <div
        class="t-divider__content"
      />
    </div>
    <span>
      文字信息
    </span>
    <div
      class="t-divider t-divider--vertical t-divider--center"
      role="separator"
    >
      <div
        class="t-divider__content"
      />
    </div>
    <span>
      文字信息
    </span>
  </div>
</div>
`;

exports[`csr snapshot test > csr test src/divider/_example/index.tsx 1`] = `
<div>
  <div
    class="tdesign-mobile-demo"
  >
    <div
      class="tdesign-mobile-demo-header"
    >
      <h1
        class="tdesign-mobile-demo-header__title"
      >
        Divider 分割符
      </h1>
      <p
        class="tdesign-mobile-demo-header__summary"
      >
        用于分割、组织、细化有一定逻辑的组织元素内容和页面结构。
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <h2
          class="tdesign-mobile-demo-block__title"
        >
          01 组件类型
        </h2>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot with-padding"
      >
        <div
          class="divider-demo__title"
        >
          水平分割线
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--center"
          role="separator"
        >
          <div
            class="t-divider__content"
          />
        </div>
        <div
          class="divider-demo__title"
        >
          带文字水平分割线
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--left"
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--center"
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--right"
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="divider-demo__title"
          style="margin-bottom: 10px;"
        >
          垂直分割线
        </div>
        <div
          class="divider-wrapper"
        >
          <span>
            文字信息
          </span>
          <div
            class="t-divider t-divider--vertical t-divider--center"
            role="separator"
          >
            <div
              class="t-divider__content"
            />
          </div>
          <span>
            文字信息
          </span>
          <div
            class="t-divider t-divider--vertical t-divider--center"
            role="separator"
          >
            <div
              class="t-divider__content"
            />
          </div>
          <span>
            文字信息
          </span>
        </div>
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <h2
          class="tdesign-mobile-demo-block__title"
        >
          02 组件状态
        </h2>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot with-padding"
      >
        <div>
          <div
            class="divider-demo__title"
          >
            虚线样式
          </div>
          <div
            class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
            role="separator"
          >
            <div
              class="t-divider__content"
            />
          </div>
          <div
            class="t-divider t-divider--horizontal t-divider--left t-divider--dashed"
            role="separator"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
          <div
            class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
            role="separator"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
          <div
            class="t-divider t-divider--horizontal t-divider--right t-divider--dashed"
            role="separator"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test src/divider/_example/theme.tsx 1`] = `
<div>
  <div>
    <div
      class="divider-demo__title"
    >
      虚线样式
    </div>
    <div
      class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
      role="separator"
    >
      <div
        class="t-divider__content"
      />
    </div>
    <div
      class="t-divider t-divider--horizontal t-divider--left t-divider--dashed"
      role="separator"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
    <div
      class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
      role="separator"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
    <div
      class="t-divider t-divider--horizontal t-divider--right t-divider--dashed"
      role="separator"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test src/grid/_example/badge.tsx 1`] = `
<div>
  <div
    class="t-grid"
  >
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--dot t-badge--has-children t-badge--medium"
        />
        <img
          class="img-4 img-vertical"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          <div
            class="text-4"
          >
            标题文字
          </div>
        </div>
        <div
          class="t-grid-item__description"
        />
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--circle t-badge--has-children t-badge--medium"
        >
          8
        </div>
        <img
          class="img-4 img-vertical"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          <div
            class="text-4"
          >
            标题文字
          </div>
        </div>
        <div
          class="t-grid-item__description"
        />
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--circle t-badge--has-children t-badge--medium"
        >
          new
        </div>
        <img
          class="img-4 img-vertical"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          <div
            class="text-4"
          >
            标题文字
          </div>
        </div>
        <div
          class="t-grid-item__description"
        />
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--circle t-badge--has-children t-badge--medium"
        >
          ···
        </div>
        <img
          class="img-4 img-vertical"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          <div
            class="text-4"
          >
            标题文字
          </div>
        </div>
        <div
          class="t-grid-item__description"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test src/result/_example/custom.tsx 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-result t-result--theme-default"
      >
        <div
          class="t-result__thumb"
        >
          <div
            class="t-image t-image--round extra-class-image"
          >
            <div
              class="t-image__status"
            >
              <svg
                class="t-icon t-icon-ellipsis"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <img
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/result1.png"
              style="object-fit: fill; width: inherit; height: inherit;"
            />
          </div>
        </div>
        <div
          class="t-result__title"
        >
          自定义结果
        </div>
        <div
          class="t-result__description"
        >
          描述文字
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-result t-result--theme-default"
    >
      <div
        class="t-result__thumb"
      >
        <div
          class="t-image t-image--round extra-class-image"
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/result1.png"
            style="object-fit: fill; width: inherit; height: inherit;"
          />
        </div>
      </div>
      <div
        class="t-result__title"
      >
        自定义结果
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`csr snapshot test > csr test src/result/_example/index.tsx 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tdesign-mobile-demo"
      >
        <div
          class="tdesign-mobile-demo-header"
        >
          <h1
            class="tdesign-mobile-demo-header__title"
          >
            Result 结果
          </h1>
          <p
            class="tdesign-mobile-demo-header__summary"
          >
            结果反馈
          </p>
        </div>
        <div
          class="tdesign-mobile-demo-block"
        >
          <div
            class="tdesign-mobile-demo-block__header"
          >
            <h2
              class="tdesign-mobile-demo-block__title"
            >
              01类型
            </h2>
            <p
              class="tdesign-mobile-demo-block__summary"
            >
              不同结果反馈
            </p>
          </div>
          <div
            class="tdesign-mobile-demo-block__slot"
          >
            <div>
              <div
                class="t-result t-result--theme-success space"
              >
                <div
                  class="t-result__thumb"
                >
                  <svg
                    class="t-icon t-icon-check-circle t-result__icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                    <path
                      d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <div
                  class="t-result__title"
                >
                  成功状态
                </div>
                <div
                  class="t-result__description"
                >
                  描述文字
                </div>
              </div>
              <div
                class="t-result t-result--theme-error space"
              >
                <div
                  class="t-result__thumb"
                >
                  <svg
                    class="t-icon t-icon-close-circle t-result__icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M4.98 10.31L7.3 8 5 5.69l.7-.7L8 7.28 10.31 5l.7.7L8.72 8l2.3 2.31-.7.7L8 8.72 5.69 11l-.7-.7z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                    <path
                      d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <div
                  class="t-result__title"
                >
                  失败状态
                </div>
                <div
                  class="t-result__description"
                >
                  描述文字
                </div>
              </div>
              <div
                class="t-result t-result--theme-warning space"
              >
                <div
                  class="t-result__thumb"
                >
                  <svg
                    class="t-icon t-icon-info-circle t-result__icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                    <path
                      d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <div
                  class="t-result__title"
                >
                  警示状态
                </div>
                <div
                  class="t-result__description"
                >
                  描述文字
                </div>
              </div>
              <div
                class="t-result t-result--theme-default space"
              >
                <div
                  class="t-result__thumb"
                >
                  <svg
                    class="t-icon t-icon-info-circle t-result__icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                    <path
                      d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <div
                  class="t-result__title"
                >
                  默认状态
                </div>
                <div
                  class="t-result__description"
                >
                  描述文字
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tdesign-mobile-demo-block tdesign-mobile-demo-block_subtitle"
        >
          <div
            class="tdesign-mobile-demo-block__header"
          >
            
            <p
              class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
            >
              自定义结果
            </p>
          </div>
          <div
            class="tdesign-mobile-demo-block__slot"
          >
            <div
              class="t-result t-result--theme-default"
            >
              <div
                class="t-result__thumb"
              >
                <div
                  class="t-image t-image--round extra-class-image"
                >
                  <div
                    class="t-image__status"
                  >
                    <svg
                      class="t-icon t-icon-ellipsis"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </div>
                  <img
                    class="t-image__img"
                    src="https://tdesign.gtimg.com/mobile/demos/result1.png"
                    style="object-fit: fill; width: inherit; height: inherit;"
                  />
                </div>
              </div>
              <div
                class="t-result__title"
              >
                自定义结果
              </div>
              <div
                class="t-result__description"
              >
                描述文字
              </div>
            </div>
          </div>
        </div>
        <div
          class="tdesign-mobile-demo-block tdesign-mobile-demo-block_subtitle"
        >
          <div
            class="tdesign-mobile-demo-block__header"
          >
            
            <p
              class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
            >
              页面位置展示
            </p>
          </div>
          <div
            class="tdesign-mobile-demo-block__slot"
          >
            <div
              class="padding"
            >
              <button
                class="t-button t-button--outline t-button--primary t-size-l t-is-block t-button--shape-rectangle"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                   
                  页面位置展示
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tdesign-mobile-demo"
    >
      <div
        class="tdesign-mobile-demo-header"
      >
        <h1
          class="tdesign-mobile-demo-header__title"
        >
          Result 结果
        </h1>
        <p
          class="tdesign-mobile-demo-header__summary"
        >
          结果反馈
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block"
      >
        <div
          class="tdesign-mobile-demo-block__header"
        >
          <h2
            class="tdesign-mobile-demo-block__title"
          >
            01类型
          </h2>
          <p
            class="tdesign-mobile-demo-block__summary"
          >
            不同结果反馈
          </p>
        </div>
        <div
          class="tdesign-mobile-demo-block__slot"
        >
          <div>
            <div
              class="t-result t-result--theme-success space"
            >
              <div
                class="t-result__thumb"
              >
                <svg
                  class="t-icon t-icon-check-circle t-result__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-result__title"
              >
                成功状态
              </div>
              <div
                class="t-result__description"
              >
                描述文字
              </div>
            </div>
            <div
              class="t-result t-result--theme-error space"
            >
              <div
                class="t-result__thumb"
              >
                <svg
                  class="t-icon t-icon-close-circle t-result__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M4.98 10.31L7.3 8 5 5.69l.7-.7L8 7.28 10.31 5l.7.7L8.72 8l2.3 2.31-.7.7L8 8.72 5.69 11l-.7-.7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-result__title"
              >
                失败状态
              </div>
              <div
                class="t-result__description"
              >
                描述文字
              </div>
            </div>
            <div
              class="t-result t-result--theme-warning space"
            >
              <div
                class="t-result__thumb"
              >
                <svg
                  class="t-icon t-icon-info-circle t-result__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-result__title"
              >
                警示状态
              </div>
              <div
                class="t-result__description"
              >
                描述文字
              </div>
            </div>
            <div
              class="t-result t-result--theme-default space"
            >
              <div
                class="t-result__thumb"
              >
                <svg
                  class="t-icon t-icon-info-circle t-result__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-result__title"
              >
                默认状态
              </div>
              <div
                class="t-result__description"
              >
                描述文字
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="tdesign-mobile-demo-block tdesign-mobile-demo-block_subtitle"
      >
        <div
          class="tdesign-mobile-demo-block__header"
        >
          
          <p
            class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
          >
            自定义结果
          </p>
        </div>
        <div
          class="tdesign-mobile-demo-block__slot"
        >
          <div
            class="t-result t-result--theme-default"
          >
            <div
              class="t-result__thumb"
            >
              <div
                class="t-image t-image--round extra-class-image"
              >
                <div
                  class="t-image__status"
                >
                  <svg
                    class="t-icon t-icon-ellipsis"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <img
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/result1.png"
                  style="object-fit: fill; width: inherit; height: inherit;"
                />
              </div>
            </div>
            <div
              class="t-result__title"
            >
              自定义结果
            </div>
            <div
              class="t-result__description"
            >
              描述文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="tdesign-mobile-demo-block tdesign-mobile-demo-block_subtitle"
      >
        <div
          class="tdesign-mobile-demo-block__header"
        >
          
          <p
            class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
          >
            页面位置展示
          </p>
        </div>
        <div
          class="tdesign-mobile-demo-block__slot"
        >
          <div
            class="padding"
          >
            <button
              class="t-button t-button--outline t-button--primary t-size-l t-is-block t-button--shape-rectangle"
              type="button"
            >
              <span
                class="t-button__text"
              >
                 
                页面位置展示
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`csr snapshot test > csr test src/result/_example/theme.tsx 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="t-result t-result--theme-success space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-check-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            成功状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
        <div
          class="t-result t-result--theme-error space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-close-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M4.98 10.31L7.3 8 5 5.69l.7-.7L8 7.28 10.31 5l.7.7L8.72 8l2.3 2.31-.7.7L8 8.72 5.69 11l-.7-.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            失败状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
        <div
          class="t-result t-result--theme-warning space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            警示状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
        <div
          class="t-result t-result--theme-default space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            默认状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="t-result t-result--theme-success space"
      >
        <div
          class="t-result__thumb"
        >
          <svg
            class="t-icon t-icon-check-circle t-result__icon"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-result__title"
        >
          成功状态
        </div>
        <div
          class="t-result__description"
        >
          描述文字
        </div>
      </div>
      <div
        class="t-result t-result--theme-error space"
      >
        <div
          class="t-result__thumb"
        >
          <svg
            class="t-icon t-icon-close-circle t-result__icon"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4.98 10.31L7.3 8 5 5.69l.7-.7L8 7.28 10.31 5l.7.7L8.72 8l2.3 2.31-.7.7L8 8.72 5.69 11l-.7-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-result__title"
        >
          失败状态
        </div>
        <div
          class="t-result__description"
        >
          描述文字
        </div>
      </div>
      <div
        class="t-result t-result--theme-warning space"
      >
        <div
          class="t-result__thumb"
        >
          <svg
            class="t-icon t-icon-info-circle t-result__icon"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-result__title"
        >
          警示状态
        </div>
        <div
          class="t-result__description"
        >
          描述文字
        </div>
      </div>
      <div
        class="t-result t-result--theme-default space"
      >
        <div
          class="t-result__thumb"
        >
          <svg
            class="t-icon t-icon-info-circle t-result__icon"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-result__title"
        >
          默认状态
        </div>
        <div
          class="t-result__description"
        >
          描述文字
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ssr snapshot test > ssr test src/divider/_example/base.tsx 1`] = `"<div class="divider-demo__title">水平分割线</div><div class="t-divider t-divider--horizontal t-divider--center" role="separator"><div class="t-divider__content"></div></div><div class="divider-demo__title">带文字水平分割线</div><div class="t-divider t-divider--horizontal t-divider--left" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--center" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--right" role="separator"><div class="t-divider__content">文字信息</div></div><div class="divider-demo__title" style="margin-bottom:10px">垂直分割线</div><div class="divider-wrapper"><span>文字信息</span><div class="t-divider t-divider--vertical t-divider--center" role="separator"><div class="t-divider__content"></div></div><span>文字信息</span><div class="t-divider t-divider--vertical t-divider--center" role="separator"><div class="t-divider__content"></div></div><span>文字信息</span></div>"`;

exports[`ssr snapshot test > ssr test src/divider/_example/index.tsx 1`] = `"<div class="tdesign-mobile-demo" data-reactroot=""><div class="tdesign-mobile-demo-header"><h1 class="tdesign-mobile-demo-header__title">Divider 分割符</h1><p class="tdesign-mobile-demo-header__summary">用于分割、组织、细化有一定逻辑的组织元素内容和页面结构。</p></div><div class="tdesign-mobile-demo-block"><div class="tdesign-mobile-demo-block__header"><h2 class="tdesign-mobile-demo-block__title">01 组件类型</h2></div><div class="tdesign-mobile-demo-block__slot with-padding"><div class="divider-demo__title">水平分割线</div><div class="t-divider t-divider--horizontal t-divider--center" role="separator"><div class="t-divider__content"></div></div><div class="divider-demo__title">带文字水平分割线</div><div class="t-divider t-divider--horizontal t-divider--left" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--center" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--right" role="separator"><div class="t-divider__content">文字信息</div></div><div class="divider-demo__title" style="margin-bottom:10px">垂直分割线</div><div class="divider-wrapper"><span>文字信息</span><div class="t-divider t-divider--vertical t-divider--center" role="separator"><div class="t-divider__content"></div></div><span>文字信息</span><div class="t-divider t-divider--vertical t-divider--center" role="separator"><div class="t-divider__content"></div></div><span>文字信息</span></div></div></div><div class="tdesign-mobile-demo-block"><div class="tdesign-mobile-demo-block__header"><h2 class="tdesign-mobile-demo-block__title">02 组件状态</h2></div><div class="tdesign-mobile-demo-block__slot with-padding"><div><div class="divider-demo__title">虚线样式</div><div class="t-divider t-divider--horizontal t-divider--center t-divider--dashed" role="separator"><div class="t-divider__content"></div></div><div class="t-divider t-divider--horizontal t-divider--left t-divider--dashed" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--center t-divider--dashed" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--right t-divider--dashed" role="separator"><div class="t-divider__content">文字信息</div></div></div></div></div></div>"`;

exports[`ssr snapshot test > ssr test src/divider/_example/theme.tsx 1`] = `"<div data-reactroot=""><div class="divider-demo__title">虚线样式</div><div class="t-divider t-divider--horizontal t-divider--center t-divider--dashed" role="separator"><div class="t-divider__content"></div></div><div class="t-divider t-divider--horizontal t-divider--left t-divider--dashed" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--center t-divider--dashed" role="separator"><div class="t-divider__content">文字信息</div></div><div class="t-divider t-divider--horizontal t-divider--right t-divider--dashed" role="separator"><div class="t-divider__content">文字信息</div></div></div>"`;

exports[`ssr snapshot test > ssr test src/grid/_example/badge.tsx 1`] = `"<div class="t-grid"><div class="t-grid-item" style="flex-basis:25%;flex-direction:column;padding-left:0;padding-right:0;align-items:center;justify-content:center;text-align:center"><div class="t-badge"><div class="t-badge__inner t-badge--dot t-badge--has-children t-badge--medium"></div><img class="img-4 img-vertical" src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"/></div><div class="t-grid-item__text" style="padding-left:0"><div class="t-grid-item__title" style="padding-top:8px;margin-bottom:4px"><div class="text-4">标题文字</div></div><div class="t-grid-item__description"></div></div></div><div class="t-grid-item" style="flex-basis:25%;flex-direction:column;padding-left:0;padding-right:0;align-items:center;justify-content:center;text-align:center"><div class="t-badge"><div class="t-badge__inner t-badge--circle t-badge--has-children t-badge--medium">8</div><img class="img-4 img-vertical" src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"/></div><div class="t-grid-item__text" style="padding-left:0"><div class="t-grid-item__title" style="padding-top:8px;margin-bottom:4px"><div class="text-4">标题文字</div></div><div class="t-grid-item__description"></div></div></div><div class="t-grid-item" style="flex-basis:25%;flex-direction:column;padding-left:0;padding-right:0;align-items:center;justify-content:center;text-align:center"><div class="t-badge"><div class="t-badge__inner t-badge--circle t-badge--has-children t-badge--medium">new</div><img class="img-4 img-vertical" src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"/></div><div class="t-grid-item__text" style="padding-left:0"><div class="t-grid-item__title" style="padding-top:8px;margin-bottom:4px"><div class="text-4">标题文字</div></div><div class="t-grid-item__description"></div></div></div><div class="t-grid-item" style="flex-basis:25%;flex-direction:column;padding-left:0;padding-right:0;align-items:center;justify-content:center;text-align:center"><div class="t-badge"><div class="t-badge__inner t-badge--circle t-badge--has-children t-badge--medium">···</div><img class="img-4 img-vertical" src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"/></div><div class="t-grid-item__text" style="padding-left:0"><div class="t-grid-item__title" style="padding-top:8px;margin-bottom:4px"><div class="text-4">标题文字</div></div><div class="t-grid-item__description"></div></div></div></div>"`;

exports[`ssr snapshot test > ssr test src/result/_example/custom.tsx 1`] = `"<div class="t-result t-result--theme-default" data-reactroot=""><div class="t-result__thumb"><div class="t-image t-image--round extra-class-image"><div class="t-image__status"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-ellipsis"><path fill="currentColor" d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z" fill-opacity="0.9"></path></svg></div><img class="t-image__img" src="https://tdesign.gtimg.com/mobile/demos/result1.png" style="object-fit:fill;width:inherit;height:inherit"/></div></div><div class="t-result__title">自定义结果</div><div class="t-result__description">描述文字</div></div>"`;

exports[`ssr snapshot test > ssr test src/result/_example/index.tsx 1`] = `"<div class="tdesign-mobile-demo"><div class="tdesign-mobile-demo-header"><h1 class="tdesign-mobile-demo-header__title">Result 结果</h1><p class="tdesign-mobile-demo-header__summary">结果反馈</p></div><div class="tdesign-mobile-demo-block"><div class="tdesign-mobile-demo-block__header"><h2 class="tdesign-mobile-demo-block__title">01类型</h2><p class="tdesign-mobile-demo-block__summary">不同结果反馈</p></div><div class="tdesign-mobile-demo-block__slot"><div><div class="t-result t-result--theme-success space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-check-circle t-result__icon"><path fill="currentColor" d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z" fill-opacity="0.9"></path><path fill="currentColor" d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">成功状态</div><div class="t-result__description">描述文字</div></div><div class="t-result t-result--theme-error space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle t-result__icon"><path fill="currentColor" d="M4.98 10.31L7.3 8 5 5.69l.7-.7L8 7.28 10.31 5l.7.7L8.72 8l2.3 2.31-.7.7L8 8.72 5.69 11l-.7-.7z" fill-opacity="0.9"></path><path fill="currentColor" d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">失败状态</div><div class="t-result__description">描述文字</div></div><div class="t-result t-result--theme-warning space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-info-circle t-result__icon"><path fill="currentColor" d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z" fill-opacity="0.9"></path><path fill="currentColor" d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">警示状态</div><div class="t-result__description">描述文字</div></div><div class="t-result t-result--theme-default space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-info-circle t-result__icon"><path fill="currentColor" d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z" fill-opacity="0.9"></path><path fill="currentColor" d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">默认状态</div><div class="t-result__description">描述文字</div></div></div></div></div><div class="tdesign-mobile-demo-block tdesign-mobile-demo-block_subtitle"><div class="tdesign-mobile-demo-block__header"><p class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle">自定义结果</p></div><div class="tdesign-mobile-demo-block__slot"><div class="t-result t-result--theme-default"><div class="t-result__thumb"><div class="t-image t-image--round extra-class-image"><div class="t-image__status"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-ellipsis"><path fill="currentColor" d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z" fill-opacity="0.9"></path></svg></div><img class="t-image__img" src="https://tdesign.gtimg.com/mobile/demos/result1.png" style="object-fit:fill;width:inherit;height:inherit"/></div></div><div class="t-result__title">自定义结果</div><div class="t-result__description">描述文字</div></div></div></div><div class="tdesign-mobile-demo-block tdesign-mobile-demo-block_subtitle"><div class="tdesign-mobile-demo-block__header"><p class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle">页面位置展示</p></div><div class="tdesign-mobile-demo-block__slot"><div class="padding"><button type="button" class="t-button t-button--outline t-button--primary t-size-l t-is-block t-button--shape-rectangle"><span class="t-button__text"> <!-- -->页面位置展示</span></button></div></div></div></div>"`;

exports[`ssr snapshot test > ssr test src/result/_example/theme.tsx 1`] = `"<div data-reactroot=""><div class="t-result t-result--theme-success space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-check-circle t-result__icon"><path fill="currentColor" d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z" fill-opacity="0.9"></path><path fill="currentColor" d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">成功状态</div><div class="t-result__description">描述文字</div></div><div class="t-result t-result--theme-error space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle t-result__icon"><path fill="currentColor" d="M4.98 10.31L7.3 8 5 5.69l.7-.7L8 7.28 10.31 5l.7.7L8.72 8l2.3 2.31-.7.7L8 8.72 5.69 11l-.7-.7z" fill-opacity="0.9"></path><path fill="currentColor" d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">失败状态</div><div class="t-result__description">描述文字</div></div><div class="t-result t-result--theme-warning space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-info-circle t-result__icon"><path fill="currentColor" d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z" fill-opacity="0.9"></path><path fill="currentColor" d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">警示状态</div><div class="t-result__description">描述文字</div></div><div class="t-result t-result--theme-default space"><div class="t-result__thumb"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-info-circle t-result__icon"><path fill="currentColor" d="M7.5 12V6.5h1V12h-1zM8.6 4H7.4v1.2h1.2V4z" fill-opacity="0.9"></path><path fill="currentColor" d="M1 8a7 7 0 1014 0A7 7 0 001 8zm1 0a6 6 0 1112 0A6 6 0 012 8z" fill-opacity="0.9"></path></svg></div><div class="t-result__title">默认状态</div><div class="t-result__description">描述文字</div></div></div>"`;
